# solana_bot

./: .env  .gitignore  config.json  docker-compose.yml  recap.txt  test.json
migration/: knexfile.js  package.json
migration/migrations/: 20240327212117_users.js
olderBot/: .gitignore  Cargo.toml  config.json  memo
olderBot/src/: api_jupiter.rs  api_solana.rs  bot_grid_refacto.rs  json_config.rs  main.rs
src/: api_jupiter.rs  bot.rs  db.rs  discord.rs  keypair.rs  main.rs  model.rs  thread_handler.rs  types.rs
