[package]
name = "bot-grid-solana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bincode = "1.3.3"
bip39 = "2.0.0"
dotenv = "0.15.0"
jupiter-swap-api-client = "0.1.0"
reqwest = "0.11.26"
serde = { version = "1.0.197",  features = ["derive"] }
serde_json = "1.0.114"
solana-account-decoder = "1.18.6"
solana-client = "1.18.6"
solana-program = "1.18.6"
solana-sdk = "1.18.6"
spl-token = "3.2"
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
tiny-hderive = "0.3.0"
tokio = { version = "1.36.0", features = ["full"] }
